--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FOOD,LLC</title>
-     <link rel="stylesheet" href="in3.css">
+     <link rel="stylesheet" href="css/in3.css">
     <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="3.css">
+    <link rel="stylesheet" href="css/3.css">
     
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
